--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "build": "next build",
+    "dev": "next dev",
     "d": "next dev",
     "lint": "eslint .",
     "start": "next start"
@@ -58,7 +59,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^1.1.2",
-    "zod": "3.25.76"
+    "zod": "3.25.76",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@types/node": "^22",
